<resources>
    <string name="app_name">ANC-AntenatalCare</string>
    <string name="anc_antenatalcare">ANC-AntenatalCare</string>
    <string name="tap_anywhere_to_continue">Tap anywhere to continue</string>
    <string name="need_to_register_n">Need to register? \n रजिस्टर करने की आवश्यकता है?</string>
    <string name="already_registered_n">Already registered? \n पहले से पंजीकृत?</string>
    <string name="signup_here_n">SignUp here \n पंजी यहॉ करे</string>
    <string name="login_here_n">Login here \n यहां लॉगिन करें</string>
    <string name="doctor_patient_question">Are you a doctor or a patient? \nक्या आप एक चिकित्सक हैं या एक मरीज़ हैं?</string>
    <string name="doctor">Doctor. \nचिकित्सक हूँ।</string>
    <string name="patient">Patient. \nमरीज़ हूँ।</string>
    <string name="doctor_details">Doctor\'s Details: \nचिकित्सक की जानकारी:</string>
    <string name="doctor_name">Doctor\'s Name: / चिकित्सक का नाम:</string>
    <string name="email_id">Email Id: / ई मेल:</string>
    <string name="smc_number">State Medical Council Number: </string>
    <string name="password_hint">*This number will be your password. \n*यह संख्या आपका पासवर्ड होगा।</string>
    <string name="hospital_details">Hospital Details: \nअस्पताल की जानकारी:</string>
    <string name="hospital_name">Hospital Name: / अस्पताल का नाम:</string>
    <string name="area_hint">Area: / छेत्र:</string>
    <string name="city_hint">City: / शहर:</string>
    <string name="state_hint">State: / राज्य:</string>
    <string name="postal_hint">Postal Code: / डाक कोड:</string>
    <string name="password">Password: / कुंजिका:</string>
    <string name="smc_number_hint">State Medical Council Number </string>
    <string name="patient_s_name">Patient\'s Name / मरीज का नाम:</string>
    <string name="phone_no">Phone No. / फोन नंबर।</string>
    <string name="patient_s_address">Patient\'s Address: / रोगी का पता:</string>
    <string name="husband_s_name">Husband\'s Name: / पति का नाम:</string>
    <string name="patient_s_age">Patient\'s Age: / रोगी की आयु:</string>
    <string name="opd_no">OPD No.</string>
    <string name="choose_hospital">Choose Hospital\nअस्पताल चुनें</string>
    <string name="verify">Verify</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="string_todo" />
    <string name="feedback">Feedback</string>
    <string name="help">Help</string>
    <string name="logout">Logout</string>
    <string name="search">Search</string>
    <string name="patient_s_details_n">Patient\'s Details \n रोगी का विवरण</string>
    <string name="pregnancy_details_n">Pregnancy Details \n गर्भावस्था का विवरण</string>
    <string name="investigation_of_patient_n">Investigation of Patient \n रोगी की जांच</string>
    <string name="treatment_details_of_patient_n">Treatment Details of Patient \n रोगी का उपचार विवरण</string>
    <string name="complaints_n">Complaints \n शिकायतें</string>
    <string name="appointment_dates_with_doctor_n">Appointment dates with Doctor \n डॉक्टर के साथ नियुक्ति की तारीखें</string>
    <string name="image_sample_n">Image Sample \n छवियाँ नमूना</string>
    <string name="enter_a_date">Enter a Date....</string>
    <string name="add_date">Add Date</string>
    <string name="update_dates">Update Dates \nअद्यतन तिथि</string>
    <string name="todo">TODO</string>
    <string name="add_new_details">Add New Details \nनयी जानकारी जमा करें</string>
    <string name="view_previous_details">View Previous Details \nपुरानी जानकारी देखें</string>
    <string name="date">Date:</string>
    <string name="gravida">Gravida:</string>
    <string name="parity">Parity:</string>
    <string name="live_issues">Live Issues:</string>
    <string name="abortion">Abortion:</string>
    <string name="lmp">LMP:</string>
    <string name="pog">POG:</string>
    <string name="edd">EDD:</string>
    <string name="diagnosis">Diagnosis:</string>
    <string name="submit">Submit \nजमा करें</string>
    <string name="clear_all">Clear All \nसब साफ करें</string>
    <string name="date_format">DD/MM/YYYY</string>
    <string name="routine_investigations">Routine Investigations</string>
    <string name="obstetric_ultrasound">Obstetric Ultrasound</string>
    <string name="new_investigation">New Investigation \nनयी जांच</string>
    <string name="view_previous_investigation">View Previous Investigation \nपुरानी जांच देखें</string>
    <string name="blood_group">Blood Group:</string>
    <string name="hemoglobin">Hemoglobin:</string>
    <string name="thalassemia_screen">Thalassemia Screen:</string>
    <string name="vdrl">VDRL:</string>
    <string name="ogtt">OGTT:</string>
    <string name="hiv">HIV 1&amp;2:</string>
    <string name="hbsAg">HbsAg:</string>
    <string name="urine_rm">Urine R-M:</string>
    <string name="serum_tsh">Serum TSH:</string>
    <string name="any_other">Any Other:</string>
    <string name="ga">GA:</string>
    <string name="crl">CRL:</string>
    <string name="bpd">BPD:</string>
    <string name="hc">HC:</string>
    <string name="ac">AC:</string>
    <string name="fl">FL:</string>
    <string name="efw">EFW:</string>
    <string name="fill_again_n">Fill Again \nफिर से भरें</string>
    <string name="file_a_complaint_n">File A Complaint \n एक शिकायत दर्ज करे</string>
    <string name="complaint_solved_delete_it_n">Complaint Solved? delete it. \nशिकायत हल? इसे मिटाओ।</string>
    <string name="enter_your_complaint_n">Enter Your Complaint… \n अपनी शिकायत दर्ज करें…</string>
    <string name="verify_nemail_naddress">verify \nEmail \nAddress</string>
    <string name="enter_phone_no_with_country_code">Enter Phone No. with Country Code</string>
    <string name="enter_your_treatment_details_n">Enter Your Treatment Details… \n अपने उपचार विवरण दर्ज करें…</string>
    <string name="enter_details_n">Enter Details \n विवरण दर्ज करें</string>
    <string name="delete_details_n">Delete Details \nविवरण हटाएं</string>
    <string name="no_results">No Results</string>
    <string name="click_here_to_view_the_video_n">Click here to view the video \nवीडियो देखने के लिए यहां क्लिक करें</string>
    <string name="strongly_disagree">STRONGLY DISAGREE</string>
    <string name="disagree">DISAGREE</string>
    <string name="neither_agree_nor_disagree">NEITHER AGREE NOR DISAGREE</string>
    <string name="agree">AGREE</string>
    <string name="strongly_agree">STRONGLY AGREE</string>
    <string name="satisfaction_scale_n_patient">SATISFACTION SCALE \n(PATIENT)</string>
    <string name="i_am_satisfied_with_the_antenatal_care_i_have_received_n">I am satisfied with the antenatal care I have received \nमुझे जो प्रसव पूर्व देखभाल मिली है, उससे मैं संतुष्ट हूं</string>
    <string name="i_feel_connected_to_my_healthcare_provider_n">I feel connected to my healthcare provider \nमैं अपने स्वास्थ्य सेवा प्रदाता से जुड़ा हुआ महसूस करता हूं</string>
    <string name="i_feel_knowledgeable_about_my_pregnancy_n">I feel knowledgeable about my pregnancy \nमैं अपनी गर्भावस्था के बारे में जानकार महसूस करता हूं</string>
    <string name="i_am_getting_the_care_that_i_need_n">I am getting the care that I need \nमुझे वह देखभाल मिल रही है जिसकी मुझे आवश्यकता है</string>
    <string name="i_feel_my_healthcare_provider_knows_nhow_i_am_doing_in_between_my_appointments_n_n">I feel my healthcare provider knows \nhow I am doing in between my appointments \nमुझे लगता है कि मेरे स्वास्थ्य सेवा प्रदाता जानता है \nमैं अपनी नियुक्तियों के बीच में कैसे कर रहा हूं</string>
    <string name="i_feel_knowledgeable_about_the_safe_exercises_ni_need_to_do_during_my_pregnancy_n_n">I feel knowledgeable about the safe exercises \nI need to do during my pregnancy \nमैं सुरक्षित अभ्यास के बारे में जानकार लग रहा है \nमैं अपनी गर्भावस्था के दौरान करने की जरूरत है</string>
    <string name="i_feel_knowledgeable_about_my_health_and_ndietary_habits_during_my_pregnancy_n_n">I feel knowledgeable about my health and \ndietary habits during my pregnancy \nमैं अपनी गर्भावस्था के दौरान अपने स्वास्थ्य और \nआहार की आदतों के बारे में जानकार महसूस करता हूं</string>
    <string name="i_feel_that_i_know_what_to_expect_nduring_my_each_trimesters_n_n">I feel that I know what to expect \nduring my each trimesters \nमुझे लगता है कि मुझे पता है कि मेरे प्रत्येक तिमाही के दौरान \nकी उम्मीद है</string>
    <string name="it_is_convenient_for_me_to_weigh_nmyself_at_least_once_weekly_n_n">It is convenient for me to weigh \nmyself at least once weekly \nयह मेरे लिए सुविधाजनक है अपने आप को \nवजन करने के लिए कम से एक कम बार साप्ताहिक</string>
    <string name="it_is_convenient_for_me_to_measure_my_nblood_pressure_at_least_once_weekly_n_n">It is convenient for me to measure my \nblood pressure at least once weekly \nयह मेरे लिए सुविधाजनक है मेरे रक्तचाप को \nमापने के लिए कम से एक कम बार साप्ताहिक</string>
    <string name="i_feel_comfortable_sharing_my_data_with_my_nhealthcare_provider_during_virtual_visits_n_n">I feel comfortable sharing my data with my \nhealthcare provider during virtual visits \nमैं आभासी यात्राओं के दौरान अपने स्वास्थ्य सेवा प्रदाता के साथ \nअपने डेटा को साझा करने में सहज महसूस करता हूं</string>
    <string name="i_am_able_to_contact_my_healthcare_provider_nin_case_of_need_and_emergency_n_n">I am able to contact my healthcare provider \nin case of need and emergency \nमैं जरूरत और आपात स्थिति के मामले में अपने \nस्वास्थ्य सेवा प्रदाता से संपर्क करने में सक्षम हूं</string>
</resources>
