<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/patient_s_name"
        android:textSize="30sp"
        android:layout_below="@id/imageView"/>

    <EditText
        android:id="@+id/editText_patNameL"
        android:layout_width="408dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPersonName"
        android:layout_below="@+id/textView11"/>

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/phone_no"
        android:textSize="30sp"
        android:layout_below="@id/editText_patNameL"/>

    <EditText
        android:id="@+id/editText_phnL"
        android:layout_width="408dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="number"
        android:layout_below="@id/textView10"/>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="201dp"
        android:layout_height="162dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/string_todo"
        android:layout_centerHorizontal="true"
        app:srcCompat="@drawable/logo" />

    <Button
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/login_here_n"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/editText_opdL"/>

    <EditText
        android:id="@+id/editText_opdL"
        android:layout_width="408dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="number|textPersonName"
        android:layout_below="@id/textView12"/>

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/opd_no"
        android:textSize="30sp"
        android:layout_below="@id/editText_phnL"/>

    <EditText
        android:id="@+id/verification_code_entered_by_user"
        android:layout_width="408dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:autofillHints=""
        android:hint="@string/enter_otp"
        android:inputType="number"
        android:visibility="invisible"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/editText_opdL"/>

    <Button
        android:id="@+id/verify_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:background="#fece2f"
        android:text="@string/verify"
        android:visibility="invisible"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/verification_code_entered_by_user" />

</RelativeLayout>