<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DecisionPage">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:text="@string/need_to_register_n"
        android:textColor="@color/common_google_signin_btn_text_light_pressed"
        android:textSize="30sp"
        android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:onClick="signUp"
        android:text="@string/signup_here_n"
        android:textSize="36sp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/textView"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/already_registered_n"
        android:textColor="@color/common_google_signin_btn_text_light_pressed"
        android:textSize="30sp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/signup"/>

    <Button
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:onClick="login"
        android:text="@string/login_here_n"
        android:textSize="36sp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/textView2"/>

</RelativeLayout>