<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:onClick="screenTapped">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:alpha="0"
        android:contentDescription="@string/todo"
        android:layout_centerHorizontal="true"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_below="@+id/name"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:alpha="0"
        android:fontFamily="cursive"
        android:text="@string/anc_antenatalcare"
        android:textColor="@android:color/holo_red_light"
        android:textSize="36sp"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:visibility="visible" />

    <TextView
        android:id="@+id/tapAnywhere"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:text="@string/tap_anywhere_to_continue"
        android:textSize="18sp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30dp"
        android:alpha="0"/>
</RelativeLayout>